Implemented directive to upload image with preview.

--- a/GRSS.Web/Content/site.css
+++ b/GRSS.Web/Content/site.css
@@ -18,3 +18,15 @@ body {
 a {
     cursor: pointer;
 }
+
+.image-file-input {
+    display: none !important; 
+}
+
+.upload-image-preview {
+    max-height: 100%;
+    max-width: 100%;
+    cursor: pointer;
+    width: auto;
+}
+
