--- a/GRSS.Web/Content/site.css
+++ b/GRSS.Web/Content/site.css
@@ -30,3 +30,16 @@ a {
     width: auto;
 }
 
+.btn-save {
+    width: 80px;
+    margin-right: 10px;
+}
+
+.btn-cancel {
+    width: 70px;
+}
+
+.select-container {
+    padding-right: 35px;
+}
+
