proper way to pass data object to directive

--- a/GRSS.Web/App/components/supplier/company.supplier.edit.cshtml
+++ b/GRSS.Web/App/components/supplier/company.supplier.edit.cshtml
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="row" ng-repeat="category in vm.supplierCompany.categories">
-                <category-select selected-category="category" on-remove="vm.removeCategory($index)" />
+                <category-select ng-model="category" on-remove="vm.removeCategory($index)" />
             </div>
 
             <div class="row">
