--- a/GRSS.Web/App/components/dashboard/company.dashboard.cshtml
+++ b/GRSS.Web/App/components/dashboard/company.dashboard.cshtml
@@ -79,3 +79,22 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <h3>Users:</h3>
+        <table class="table table-hover table-bordered">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Email</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="user in vm.users">
+                <td>{{ user.id }}</td>
+                <td>{{ user.email }}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
